--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
-  "ownerNumber": ["6285791458996@s.whatsapp.net"],
-  "ownerName": ["Riy"],
-  "botName": "Hinata Hyuga Bot",
-  "youtubeOwner": "https://youtube.com/c/Riy",
-  "donasiDana": "081575886399",
-  "donasiGopay": "081575886399",
+  "ownerNumber": ["15107640798@s.whatsapp.net"],
+  "ownerName": ["Vander Store"],
+  "botName": "Vander MD",
+  "youtubeOwner": "-",
+  "donasiDana": "-",
+  "donasiGopay": "-",
   "sessionName": "session",
-  "pathimg": "./media/hinata.jpg",
+  "pathimg": "./media/vander.jpg",
   "gamewaktu": 90,
   "limitCount": 25,
   "gcount": {
